test/errors/reference-error.js
ReferenceError({
  name: "ReferenceError",
  message: "something went wrong",
  stack: "ReferenceError: something went wrong\n    at Object.<anonymous> (/Users/ayon/Workspace/fron/test/errors/index.js:12:22)\n    at Module._compile (internal/modules/cjs/loader.js:1147:30)\n    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1167:10)\n    at Module.load (internal/modules/cjs/loader.js:996:32)\n    at Function.Module._load (internal/modules/cjs/loader.js:896:14)\n    at Module.require (internal/modules/cjs/loader.js:1036:19)\n    at require (internal/modules/cjs/helpers.js:72:18)\n    at Object.<anonymous> (/Users/ayon/Workspace/fron/test/get-types.js:13:5)\n    at Module._compile (internal/modules/cjs/loader.js:1147:30)\n    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1167:10)\n    at Module.load (internal/modules/cjs/loader.js:996:32)\n    at Function.Module._load (internal/modules/cjs/loader.js:896:14)\n    at Module.require (internal/modules/cjs/loader.js:1036:19)\n    at require (internal/modules/cjs/helpers.js:72:18)\n    at /Users/ayon/Workspace/fron/node_modules/mocha/lib/mocha.js:250:27\n    at Array.forEach (<anonymous>)\n    at Mocha.loadFiles (/Users/ayon/Workspace/fron/node_modules/mocha/lib/mocha.js:247:14)\n    at Mocha.run (/Users/ayon/Workspace/fron/node_modules/mocha/lib/mocha.js:576:10)\n    at Object.<anonymous> (/Users/ayon/Workspace/fron/node_modules/mocha/bin/_mocha:637:18)\n    at Module._compile (internal/modules/cjs/loader.js:1147:30)\n    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1167:10)\n    at Module.load (internal/modules/cjs/loader.js:996:32)\n    at Function.Module._load (internal/modules/cjs/loader.js:896:14)\n    at Function.executeUserEntryPoint [as runMain] (internal/modules/run_main.js:71:12)\n    at internal/main/run_main_module.js:17:47"
})